--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-jasmine": "^2.0.1",
+    "mocha": "^6.1.4",
+    "mochawesome": "^3.1.2",
     "puppeteer": "^1.16.0",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1",
@@ -31,6 +33,7 @@
     "selenium-webdriver": "^4.0.0-alpha.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.6"
   }
 }
