--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-modules-umd": "^7.2.0",
     "jasmine-core": "^3.4.0",
-    "jest": "^24.7.1",
+    "jest": "24.7.1",
     "jest-dom": "^3.3.0",
     "karma": "^4.1.0",
     "karma-babel-preprocessor": "^8.0.0",
